--- a/alacritty.yml
+++ b/alacritty.yml
@@ -16,16 +16,16 @@ scrolling:
 
 font:
   normal:
-    family: monospace
+    family: "MesloLGS NF"
     style: Regular
   bold:
-    family: monospace
+    family: "MesloLGS NF"
     style: Bold
   italic:
-    family: monospace
+    family: "MesloLGS NF"
     style: Italic
   bold_italic:
-    family: monospace
+    family: "MesloLGS NF"
     style: Bold Italic
   # Point size
   size: 12.0
