Add caps lock indicator to polybar

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -20,6 +20,7 @@ secondary = #9ece6a
 alert = #db4b4b
 disabled = #414868
 blue = #7aa2f7  
+orange = #FC673F
 
 [bar/basic]
 width = 100%
@@ -52,7 +53,7 @@ font-13 = Siji:style=Regular:pixelsize=20;1
 
 modules-left = launcher i3
 modules-center = date
-modules-right = left2 pulseaudio right2 powermenu
+modules-right = left2 pulseaudio right2 xkeyboard powermenu
 
 tray-position = right
 tray-padding = 2
