--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -138,3 +138,12 @@ ramp-volume-background = ${colors.background-alt}
 ramp-volume-padding = 2
 
 click-right = pavucontrol
+
+[module/xkeyboard]
+type = internal/xkeyboard
+blacklist-0 = num lock
+format = <label-indicator>
+
+label-indicator-padding = 2
+label-indicator-margin = 1
+label-indicator-background = ${colors.orange}
