--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -78,7 +78,7 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 type = custom/text
 content = "󱓞"
 content-foreground = ${colors.blue}
-click-left = rofi -show drun
+click-left = rofi -modi drun -show drun
 content-padding = 3
 content-font = 3
 
