Move polybar to bottom

--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -27,6 +27,7 @@ width = 100%
 height = 33pt
 fixed-center = true
 dpi = 96
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
